--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ label {
 .container {
     width: 100%;
     padding: 10px 0;
+  
 }
 
 .row {
@@ -108,7 +109,7 @@ label {
 
 /* NAV */
 
-#mv-logo {
+.mv__logo {
     filter: invert(79%) sepia(60%) saturate(5237%) hue-rotate(319deg) brightness(98%) contrast(109%);
     width: 45px;
     height: 50px;
@@ -120,9 +121,17 @@ nav {
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
-   padding: 30px 20px;
+   padding: 30px 60px;
+   background-color: white;
+   z-index: 1;
+   position:fixed;
+   top: 0;
+   left: 0;
+   right: 0;
+   margin: 0 auto;
+   max-width: 1280px;
+border-bottom-left-radius: 10px;
+border-bottom-right-radius: 10px;
 }
 
 
@@ -161,6 +170,7 @@ nav {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    margin-top: 15vh;
 }
 
 .title {
@@ -201,10 +211,29 @@ input {
     font-size: 25px;
 }
 
+/* MP4 */
+
+#myVideo {
+    width: 100%;
+    position: relative;
+    right: 0;
+    bottom: 0;
+}
+
+.video__container {
+
+}
+
 /* Featured Movies*/
+
+#featured__movies {
+
+}
 
 .featured__title {
     text-align: center;
+    font-size: 46px;
+    margin-top: 100px;
 }
 
 .category__title {
@@ -219,7 +248,8 @@ input {
 .poster { 
 padding-right: 25px;
 max-width: 20%;
-
+transition: all 300ms ease;
+cursor: pointer;
 }
 
 .poster__img {
@@ -234,10 +264,17 @@ max-width: 20%;
     text-align: center;
 }
 
+.poster:hover {
+    transform: scale(1.07);
+}
+
+/* Bottom BTN */
+
 .bottom__btn {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 
 .prop__btn {
@@ -246,3 +283,55 @@ max-width: 20%;
     margin-bottom: 58px;
     cursor: pointer;
 }
+
+.bottom__logo {
+position: absolute;
+opacity: 0;
+transform: translateY(50%);
+transition: opacity 300ms, transform 450ms ease;
+}
+
+.bottom__btn:hover .bottom__logo {
+    opacity: 1;
+    transform: translateY(75%);
+}
+
+
+/* Footer */
+
+
+footer {
+    background-color: #242424;
+    display: flex;
+    padding: 6% 0;
+    align-items: center;
+    justify-content: center;
+
+ }
+
+ .footer__row {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 1100px;
+ }
+ 
+ .footer__logo--image {
+    width: 70px;
+    height: 70px;
+ }
+
+ .footer__social--list {
+    width: 100%;
+    max-width: 500px;
+    display: flex;
+    margin: 20px 0;
+    text-align: center;
+ }
+
+ .footer__social--link, .footer__copyright {
+    color: white;
+margin: 0 12px;
+ text-align: center;
+ }
