--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;900&display=swap');
 
 * {
     margin: 0;
@@ -76,10 +76,10 @@ label {
     transform: scale(0.8);
 }
 
-.title {
+.website__title {
     font-size: 76px;
     margin-bottom: 12px;
-    text-align: left;
+    text-align: center;
     line-height: 1;
 }
 
@@ -105,6 +105,9 @@ label {
     width: 100%;
 }
 
+#imdbID {
+    display: none;
+} 
 
 
 /* NAV */
@@ -246,7 +249,7 @@ input {
 }
 
 .poster { 
-padding-right: 25px;
+padding: 0 10px;
 max-width: 20%;
 transition: all 300ms ease;
 cursor: pointer;
@@ -260,13 +263,243 @@ cursor: pointer;
 .movie__title {
     text-align: center;
 }
-.year {
-    text-align: center;
-}
+
 
 .poster:hover {
     transform: scale(1.07);
 }
+
+/* Modal */
+
+.modal {
+   position: fixed;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   width: 90%;
+   max-width: 1100px;
+   height: 700px;
+   box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.55);
+   border-radius: 20px;
+overflow: hidden;
+visibility: hidden;
+display: flex;
+z-index: -1;
+transition: visibility 0.4s, z-index 0.4s, box-shadow 0.05s ease;
+
+}
+
+.modal__half {
+    width: 50%;
+    position: relative;
+    transition: all 300ms ease-in;
+}
+.modal--open .modal__left,
+.modal--open .modal__right {
+    transform: translateX(0%);
+}
+
+
+.modal__left {
+    background-color: #242424;
+    display: flex;
+    flex-direction: column;
+    color: white;
+    align-items: center;
+    border-right: 1px solid #FF6F61;
+    transform: translateX(-110%);
+}
+
+.poster__wrapper {
+    display: flex;
+    margin: 0 auto;
+    padding: 24px 0 12px;
+}
+
+.modal__img {
+    border-radius: 20px;
+}
+
+.watch__now--btn {
+    border-radius: 10px;
+    background: #FF6F61;
+    color: white;
+    margin: 8px;
+    padding: 16px 0px;
+    font-size: 16px;
+    font-weight: 700;
+    max-width: 240px;
+    max-height: 60px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    border: none;
+}
+
+.fa-play {
+    font-size: 24px;
+}
+
+.modal__right {
+    background-color: rgb(245, 245, 245);
+    border-left: 1px solid #FF6F61;
+    padding: 12px 32px;
+    transform: translateX(110%);
+}
+
+.year__modal {
+    font-size: 24px;
+    line-height: 48px;
+    text-align: center;
+}
+
+.genre__wrapper {
+    text-align: center;
+}
+
+.runtime__wrapper {
+    font-style: italic;
+    text-align: center;
+}
+
+.description__wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.wrapper {
+    text-align: center;
+    margin: 12px;
+}
+
+.description__wrapper h1 {
+    padding-bottom: 12px;
+    padding-top: 8px;
+    color: #FF6F61;
+}
+
+.description__wrapper h4 {
+    font-size: 16px;
+    font-style: italic;
+    font-weight: 700;
+}
+
+.director__actor, .awards__boxoffice {
+    display: flex;
+    margin-bottom: 20px;
+}
+
+.director__wrapper {
+    width: 60%;
+}
+
+.boxoffice__wrapper {
+    width: 70%;
+}
+
+#critics {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+
+.critics__container {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 10px;
+}
+
+.critics__wrapper {
+    max-width: 140px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.critics__img {
+    width: 100%;
+}
+
+.metascore__total {
+    font-size: 10px;
+    font-weight: 500;
+    width: 64px;
+   height: 64px;
+    border: 1px solid;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #6c3;
+    color: white;
+    border-radius: 10px;
+    margin-top: 10px;
+}
+
+#metascore {
+    font-size: 30px;
+    font-weight: 600;
+}
+
+.imdb__container {
+    display: flex;
+    align-items: center;
+    margin-top: 24px;
+}
+
+.fa-star {
+    font-size: 30px;
+    margin-right: 4px;
+    color: #fabf2a;
+}
+
+.rating__number {
+    display: flex;
+    flex-direction: column;
+}
+
+.grey {
+    color: #696969;
+    font-size: 16px;
+    position: relative;
+    bottom: 5px;
+    padding-left: 2px;
+}
+
+#imdbVotes {
+    text-align: left;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 10px;
+    color: #696969;
+}
+
+
+.modal__exit {
+    position: absolute;
+    top: 30px;
+    right: 40px;
+    color: #696969;
+    font-size: 24px;
+    z-index: 100;
+}
+
+
+
+.modal--open .modal{
+    z-index: 60;
+    box-shadow: 0 20px 80px 0 rgb(0, 0 ,0 , 0.55);
+    visibility: visible;
+    position: fixed;
+}
+
+
+
+
 
 /* Bottom BTN */
 
@@ -284,17 +517,23 @@ cursor: pointer;
     cursor: pointer;
 }
 
-.bottom__logo {
+.bottom__logo--wrapper {
 position: absolute;
 opacity: 0;
 transform: translateY(50%);
 transition: opacity 300ms, transform 450ms ease;
 }
 
-.bottom__btn:hover .bottom__logo {
+.bottom__btn:hover .bottom__logo--wrapper {
     opacity: 1;
-    transform: translateY(75%);
+    transform: translateY(90%);
 }
+
+.bottom__logo {
+    width: 25px;
+    height: 30px;
+}
+
 
 
 /* Footer */
@@ -335,3 +574,18 @@ footer {
 margin: 0 12px;
  text-align: center;
  }
+
+.footer__logo {
+    filter: invert(1);
+}
+
+/* Search Page */
+
+.search__container {
+    margin-top: 115px;
+}
+
+.search__result--title {
+    font-size: 35px;
+    font-weight: 600;
+}
