--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ label {
 }
 
 #imdbID {
-    display: none;
+ 
 } 
 
 
@@ -204,7 +204,7 @@ input {
     border-radius: 100px;
 }
 
-.search__btn {
+#search__btn {
     margin-left: 10px;
     width: 200px;
     border-radius: 20px;
@@ -212,6 +212,14 @@ input {
     border: none;
     color: white;
     font-size: 25px;
+}
+
+.fa-video {
+    position: absolute;
+}
+
+.fa-spinner {
+    
 }
 
 /* MP4 */
@@ -246,6 +254,7 @@ input {
 .poster__container {
     margin-top: 20px;
     display: flex;
+    flex-wrap: wrap;
 }
 
 .poster { 
@@ -314,10 +323,12 @@ transition: visibility 0.4s, z-index 0.4s, box-shadow 0.05s ease;
     display: flex;
     margin: 0 auto;
     padding: 24px 0 12px;
+    max-width: 280px;
 }
 
 .modal__img {
     border-radius: 20px;
+    width: 100%;
 }
 
 .watch__now--btn {
@@ -369,6 +380,8 @@ transition: visibility 0.4s, z-index 0.4s, box-shadow 0.05s ease;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 0 auto;
+    max-width: 485px;
 }
 
 .wrapper {
@@ -390,15 +403,26 @@ transition: visibility 0.4s, z-index 0.4s, box-shadow 0.05s ease;
 
 .director__actor, .awards__boxoffice {
     display: flex;
+    justify-content: center;
+    text-align: center;
+width: 100%;
     margin-bottom: 20px;
 }
 
 .director__wrapper {
-    width: 60%;
+    width: 100%;
+}
+
+.actors__wrapper {
+    width: 100%;
 }
 
 .boxoffice__wrapper {
-    width: 70%;
+    width: 100%;
+}
+
+.awards__wrapper {
+    width: 100%;
 }
 
 #critics {
@@ -415,7 +439,7 @@ transition: visibility 0.4s, z-index 0.4s, box-shadow 0.05s ease;
 }
 
 .critics__wrapper {
-    max-width: 140px;
+    max-width: 80px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -583,9 +607,33 @@ margin: 0 12px;
 
 .search__container {
     margin-top: 115px;
+    display: flex;
 }
+
+.search__bar {
+    display: flex;
+ align-items: center;
+ justify-content: center;
+}
+
 
 .search__result--title {
     font-size: 35px;
     font-weight: 600;
+}
+
+.input__and__button--search {
+    display: flex;
+    max-width: 600px;
+    width: 100%;
+    margin-left: 48px;
+}
+
+.search__poster--container {
+    margin-top: 64px;
+}
+
+.poster__year {
+    text-align: center;
+    margin-bottom: 12px;
 }
