API work complete

--- a/style.css
+++ b/style.css
@@ -212,14 +212,45 @@ input {
     border: none;
     color: white;
     font-size: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.btn__video {
+    position: absolute;
+    z-index: 1;
+}
+.btn__spinner {
+    position: absolute;
+    z-index: -1;
+}
+
+.btn__spinner--visible {
+    z-index: 1;
+}
+
+.btn__video--invisible {
+    z-index: -1;
 }
 
 .fa-video {
-    position: absolute;
+ 
+    
 }
 
 .fa-spinner {
-    
+    animation: spinner 750ms infinite linear;
+ position:relative ;
+}
+
+@keyframes spinner {
+    0 {
+        transform: rotate(0);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 /* MP4 */
@@ -287,7 +318,7 @@ cursor: pointer;
    transform: translate(-50%, -50%);
    width: 90%;
    max-width: 1100px;
-   height: 700px;
+   height: 710px;
    box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.55);
    border-radius: 20px;
 overflow: hidden;
@@ -563,13 +594,13 @@ transition: opacity 300ms, transform 450ms ease;
 /* Footer */
 
 
+
 footer {
     background-color: #242424;
     display: flex;
     padding: 6% 0;
     align-items: center;
     justify-content: center;
-
  }
 
  .footer__row {
@@ -601,6 +632,10 @@ margin: 0 12px;
 
 .footer__logo {
     filter: invert(1);
+}
+
+#search__footer {
+
 }
 
 /* Search Page */
