--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@
     font-family: 'Roboto', sans-serif;
 }
 
+.mid__section {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 24px;
+}
+
 html {
     scroll-behavior: smooth;
 }
@@ -157,6 +163,7 @@ border-bottom-right-radius: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
 
 .logo__title {
