--- a/style.css
+++ b/style.css
@@ -130,7 +130,6 @@ nav {
     align-items: center;
     width: 100%;
    padding: 30px 60px;
-   background-color: white;
    z-index: 1;
    position:fixed;
    top: 0;
@@ -687,7 +686,6 @@ margin: 0 12px;
 }
 
 .dark-theme nav {
-    background-color: #242424;
     color: white;
 }
 
@@ -727,3 +725,83 @@ margin: 0 12px;
 }
 
 
+/* // Device Compatability 
+
+// Small Phones and Tablets  */
+
+@media (max-width: 768px) {
+  .website__title {
+    font-size: 40px;
+  }
+  .secondary__title {
+    font-size: 26px;
+  }
+  .poster {
+    max-width: 33%;
+  }
+  .poster__img {
+    max-width: 190px;
+  }
+  .poster__container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .category__title {
+    text-align: center;
+  }
+  .modal {
+    flex-direction: column;
+    position: absolute;
+    height: 680px;
+    overflow-y: initial !important;
+   }
+   .modal__left {
+       width: 100%;
+       
+   }
+   .modal__right {
+       width: 100%;
+   }
+   .modal__exit {
+
+       right: 30px;
+       color: white;
+   }
+}
+
+@media (max-width: 550px) {
+    .logo__title {
+        font-size: 16px;
+    }
+    .mv__logo {
+        width: 30px;
+        height: 35px;
+    }
+    .poster {
+        max-width: 50%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+    #search {
+        padding: 10px 96px 20px 32px;
+    }
+    .modal {
+     flex-direction: column;
+     position: absolute;
+     height: 680px;
+     overflow-y: initial !important;
+    }
+    .modal__left {
+        width: 100%;
+        
+    }
+    .modal__right {
+        width: 100%;
+    }
+    .modal__exit {
+        right: 30px;
+        color: white;
+    }
+}
